<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/time_left_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_time"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintTop_toBottomOf="@+id/time_left_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/hours_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        app:layout_constraintBottom_toTopOf="@+id/hours_picker"
        app:layout_constraintLeft_toLeftOf="@+id/hours_picker"
        app:layout_constraintRight_toRightOf="@+id/hours_picker" />

    <NumberPicker
        android:id="@+id/hours_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:minValue="0"
        tools:maxValue="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/minutes_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintBottom_toTopOf="@+id/minutes_picker"
        app:layout_constraintLeft_toLeftOf="@+id/minutes_picker"
        app:layout_constraintRight_toRightOf="@+id/minutes_picker" />

    <NumberPicker
        android:id="@+id/minutes_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:minValue="0"
        tools:maxValue="59"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seconds_picker"
        app:layout_constraintLeft_toRightOf="@+id/hours_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seconds_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        app:layout_constraintBottom_toTopOf="@+id/seconds_picker"
        app:layout_constraintLeft_toLeftOf="@+id/seconds_picker"
        app:layout_constraintRight_toRightOf="@+id/seconds_picker" />

    <NumberPicker
        android:id="@+id/seconds_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:minValue="0"
        tools:maxValue="59"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/minutes_picker"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_button"
        android:text="Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/start_button" />

    <Button
        android:id="@+id/start_button"
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/pause_button" />

    <Button
        android:id="@+id/pause_button"
        android:text="@string/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/start_button"
        app:layout_constraintRight_toLeftOf="@+id/cancel_button" />

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/pause_button"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>